# iree-embedded

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  deny.toml
.github/: dependabot.yml
.github/workflows/: iree-version-check.yml  runtime.yml
crates/iree-embedded/: Cargo.toml  README.md
crates/iree-embedded-sys/: Cargo.toml  README.md  build.rs  iree_bm_config.h  runtime-checksums.txt  wrapper.h
crates/iree-embedded-sys/src/: lib.rs
crates/iree-embedded-sys/tests/: link_smoke.rs
crates/iree-embedded/src/: arena.rs  context.rs  device.rs  instance.rs  lib.rs  status.rs  tensor.rs
crates/iree-embedded/tests/: link_kernels.rs  macros.rs  micro_speech.rs  simple_mul.rs
crates/iree-embedded/tests/fixtures/: micro_speech-aarch64.vmfb  micro_speech-x86_64.vmfb  micro_speech.vmfb  micro_speech_nosm.mlir  simple_mul-aarch64.vmfb  simple_mul-x86_64.vmfb  simple_mul.vmfb
crates/kws-frontend/tests/: golden.rs
examples/arduino-nano33ble-kws/: Cargo.toml  README.md  build.rs  memory.x
examples/arduino-nano33ble-kws/.cargo/: config.toml
examples/arduino-nano33ble-kws/kws-frontend/: Cargo.toml
examples/arduino-nano33ble-kws/kws-frontend/src/: bits.rs  fft.rs  lib.rs  window.rs
examples/arduino-nano33ble-kws/kws-frontend/tests/: golden.rs
examples/arduino-nano33ble-kws/models/: micro_speech.vmfb
examples/arduino-nano33ble-kws/scripts/: compile-model.sh  flash.sh
examples/arduino-nano33ble-kws/src/: main.rs
examples/microbit-v2-kws/: Cargo.toml  README.md  build.rs  memory.x
examples/microbit-v2-kws/.cargo/: config.toml
examples/microbit-v2-kws/csrc/: kws_frontend.c
examples/microbit-v2-kws/kws-frontend/src/: filterbank.rs  lib.rs  log_scale.rs  noise_reduction.rs  pcan.rs
examples/microbit-v2-kws/models/: micro_speech.h  micro_speech.vmfb  micro_speech_nosm.mlir  simple_mul.h  simple_mul.vmfb
examples/microbit-v2-kws/scripts/: compile-model.sh
examples/microbit-v2-kws/src/: main.rs  mic.rs
examples/microbit-v2-kws/tools/: frontend_host_check.cc
scripts/: build-runtime-host.sh  build-runtime-mcu.sh  fetch-iree.sh  gen-host-fixtures.sh  iree-version.env  package-runtime.sh  requirements-model.txt  test-docsrs-sim.sh
toolchains/: arm-cortex-m33.cmake  arm-cortex-m4f.cmake  arm-cortex-m7.cmake  iree_bm_config.h
