[workspace]
resolver = "2"
members = ["crates/iree-embedded-sys", "crates/iree-embedded"]
# The firmware builds for thumbv7em with its own .cargo/config; keep it (and the
# example-local kws-frontend crate it bundles) out of the host workspace so
# `cargo test` etc. stay on the host target.
exclude = ["examples/microbit-v2-kws"]
