[package]
name = "iree-embedded-sys"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
description = "Raw FFI bindings to the IREE bare-metal runtime (the only unsafe crate)."
authors = ["Tarek Allam Jr <t.allam.jr@gmail.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/tallamjr/iree-embedded"
readme = "README.md"
keywords = ["iree", "ffi", "no_std", "inference", "cortex-m"]
categories = ["external-ffi-bindings", "embedded", "no-std"]

[build-dependencies]
bindgen = { version = "0.72", features = ["experimental"] }
cc = "1"
