[package]
name = "iree-embedded"
version = "0.0.0"
edition = "2021"
publish = false
description = "Safe no_std Rust API for ML inference on Cortex-M via the IREE runtime."

[dependencies]
iree-embedded-sys = { path = "../iree-embedded-sys" }
talc = { version = "4", default-features = false }
spin = { version = "0.9", default-features = false, features = ["mutex", "spin_mutex"] }
heapless = { version = "0.8", default-features = false }
