[package]
name = "iree-embedded"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
description = "Safe no_std Rust API for ML inference on Cortex-M via the IREE runtime."
authors = ["Tarek Allam Jr <t.allam.jr@gmail.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/tallamjr/iree-embedded"
readme = "README.md"
keywords = ["iree", "embedded", "no_std", "inference", "cortex-m"]
categories = ["embedded", "no-std", "science"]

[dependencies]
# version is required alongside path so the dependency resolves once published.
iree-embedded-sys = { path = "../iree-embedded-sys", version = "0.1.0" }
# talc 5 is a from-scratch API rewrite; pinned at 4 (works, no functional gain
# from porting). Revisit if 4.x stops receiving fixes.
talc = { version = "4", default-features = false }
spin = { version = "0.12", default-features = false, features = ["mutex", "spin_mutex"] }
heapless = { version = "0.9", default-features = false }
