# Self-contained example workspace: the firmware bin plus its bundled audio
# front end. Only `iree-embedded` is reached from outside, that being the
# reusable library this example demonstrates.
[workspace]
members = ["kws-frontend"]

[package]
name = "arduino-nano33ble-kws"
version = "0.1.0"
edition = "2024"
publish = false
description = "Arduino Nano 33 BLE Sense firmware running live IREE keyword spotting."

[dependencies]
iree-embedded = { path = "../../crates/iree-embedded" }
kws-frontend = { path = "kws-frontend" }
# Safe reinterpretation of the embedded audio clip's bytes as i16 samples.
bytemuck = { version = "1", default-features = false }
# embassy-nrf is the nRF device HAL: it replaces raw nrf52840-pac register and
# DMA pokes (the SAADC/PPI capture in the old mic.rs) with safe typed APIs.
embassy-executor = { version = "0.10", features = [
    "platform-cortex-m",
    "executor-thread",
    "defmt",
] }
embassy-nrf = { version = "0.10", features = [
    "nrf52840",
    "gpiote",
    "defmt",
] }
cortex-m = { version = "0.7", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7"
defmt = "0.3"
defmt-rtt = "0.4"
panic-probe = { version = "0.3", features = ["print-defmt"] }

[profile.dev]
opt-level = "s"
debug = 2

[profile.release]
opt-level = "z"
lto = true
debug = 2
