[package]
name = "microbit-v2-kws"
version = "0.0.0"
edition = "2021"
publish = false
description = "micro:bit v2 firmware running IREE inference (simple_mul smoke, then KWS)."

[build-dependencies]
cc = "1"

[dependencies]
iree-embedded = { path = "../../crates/iree-embedded" }
cortex-m = { version = "0.7", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7"
defmt = "0.3"
defmt-rtt = "0.4"
panic-probe = { version = "0.3", features = ["print-defmt"] }

[profile.dev]
opt-level = "s"
debug = 2

[profile.release]
opt-level = "z"
lto = true
debug = 2
